--- a/config.example.yaml
+++ b/config.example.yaml
@@ -33,9 +33,7 @@ auth-dir: "~/.cli-proxy-api"
 
 # API keys for authentication
 api-keys:
-  - "your-api-key-1"
-  - "your-api-key-2"
-  - "your-api-key-3"
+  - "my-lee-12345678"
 
 # Enable debug logging
 debug: false
